rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__array_lower_string.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT array_lower(ARRAY['a', 'b']) v1\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+----+
| v1 |
+----+
| 1  |
+----+
