rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__current_schemas_including_implicit_postgres.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT current_schemas(true)\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+--------------------------------+
| current_schemas(Boolean(true)) |
+--------------------------------+
| {pg_catalog,public}            |
+--------------------------------+
