rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__current_schemas_postgres.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT current_schemas(false)\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------------------------------+
| current_schemas(Boolean(false)) |
+---------------------------------+
| {public}                        |
+---------------------------------+
