rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__epoch_to_timestamp_1.snap
---
source: cubesql/src/compile/test/test_udfs.rs
assertion_line: 307
expression: "execute_query(\"SELECT epoch_to_timestamp(1621123456)\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------------------------------------+
| epoch_to_timestamp(Int64(1621123456)) |
+---------------------------------------+
| 2021-05-16T00:04:16.000               |
+---------------------------------------+
