rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_date32_2_args.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT generate_series('2024-07-23'::date, '2024-07-28'::date);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+----------------------------------------------------------------------------------------+
| generate_series(CAST(Utf8("2024-07-23") AS Date32),CAST(Utf8("2024-07-28") AS Date32)) |
+----------------------------------------------------------------------------------------+
| 2024-07-23                                                                             |
| 2024-07-24                                                                             |
| 2024-07-25                                                                             |
| 2024-07-26                                                                             |
| 2024-07-27                                                                             |
| 2024-07-28                                                                             |
+----------------------------------------------------------------------------------------+
