rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_date32_3_args_2days_interval.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT generate_series('2024-07-23'::date, '2024-07-28'::date, '2 days'::interval);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------------------------------------------------------------------------------------------------------------------------------------+
| generate_series(CAST(Utf8("2024-07-23") AS Date32),CAST(Utf8("2024-07-28") AS Date32),CAST(Utf8("2 days") AS Interval(MonthDayNano))) |
+---------------------------------------------------------------------------------------------------------------------------------------+
| 2024-07-23                                                                                                                            |
| 2024-07-25                                                                                                                            |
| 2024-07-27                                                                                                                            |
+---------------------------------------------------------------------------------------------------------------------------------------+
