rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_date32_3_args_3years_interval.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT generate_series('2016-07-23'::date, '2024-07-28'::date, '3 years'::interval);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+----------------------------------------------------------------------------------------------------------------------------------------+
| generate_series(CAST(Utf8("2016-07-23") AS Date32),CAST(Utf8("2024-07-28") AS Date32),CAST(Utf8("3 years") AS Interval(MonthDayNano))) |
+----------------------------------------------------------------------------------------------------------------------------------------+
| 2016-07-23                                                                                                                             |
| 2019-07-23                                                                                                                             |
| 2022-07-23                                                                                                                             |
+----------------------------------------------------------------------------------------------------------------------------------------+
